updated blog and service

--- a/blog.html
+++ b/blog.html
@@ -156,9 +156,9 @@
                                         <img src="assets/img/blog/blog1.png" alt="img">
                                     </div>
                                     <div class="blog__card--content">
-                                        <span class="blog__card--tag">UI /UX DESIGN</span>
-                                        <h3 class="blog__card--title mb-12">Angular team welarges to trequests blog</h3>
-                                        <p class="blog__card--desc">Lorem ipsum dolor sit amet,elit, sed do eiusmod tempor incididunt ut labore et dolore aliqu</p>
+                                        <span class="blog__card--tag">REACT</span>
+                                        <h3 class="blog__card--title mb-12">React courses listed</h3>
+                                        <p class="blog__card--desc">Level up your React skills in 2023 with these 7 courses (beginner to advanced)</p>
                                     </div>
                                 </a>
                             </article>
@@ -171,9 +171,9 @@
                                         <img src="assets/img/blog/blog2.png" alt="img">
                                     </div>
                                     <div class="blog__card--content">
-                                        <span class="blog__card--tag">HTML AND CSS</span>
-                                        <h3 class="blog__card--title mb-12">How to create a website using html</h3>
-                                        <p class="blog__card--desc">Lorem ipsum dolor sit amet,elit, sed do eiusmod tempor incididunt ut labore et dolore aliqu</p>
+                                        <span class="blog__card--tag">DESIGN</span>
+                                        <h3 class="blog__card--title mb-12">UI/UX Roadmap</h3>
+                                        <p class="blog__card--desc">Do you want to learn UX/UI design in 2023? Here is the roadmap!</p>
                                     </div>
                                 </a>
                             </article>
@@ -183,12 +183,12 @@
                             <article class="blog__card">
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#blog3">
                                     <div class="blog__card--thumbnail">
-                                        <img src="assets/img/blog/blog6.png" alt="img">
+                                        <img src="assets/img/blog/blog3.png" alt="img">
                                     </div>
                                     <div class="blog__card--content">
-                                        <span class="blog__card--tag">BUE</span>
-                                        <h3 class="blog__card--title mb-12">How to built a vue nuxt js  template</h3>
-                                        <p class="blog__card--desc">Lorem ipsum dolor sit amet,elit, sed do eiusmod tempor incididunt ut labore et dolore aliqu</p>
+                                        <span class="blog__card--tag">DESIGN</span>
+                                        <h3 class="blog__card--title mb-12">Design inspiration for reference</h3>
+                                        <p class="blog__card--desc">Struggling with looking for Design Inspiration? This list will help you</p>
                                     </div>
                                 </a>
                             </article>
@@ -263,12 +263,24 @@
                     <img src="assets/img/blog/blog-details-1.png" alt="img">
                 </div>
                 <div class="blog__details--content mb-30">
-                    <h2 class="blog__details--title mb-20">Angular team welarges to trequests blog</h2>
-                    <p class="blog__details--desc">It is a long established fact that a reader will be distracted by the readable content of a page is when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using ique maiestatis sum quod sum ut alienum nec et to summo possim persequeris vix mea. Adhuc quodsi qui, sit no tale essent electramei sum sums rodesset in pro, quo scripta feugait vidisse. Lorem ipsum dolor sit amet, eu duo ferri labor dicat Mea ex modo reque senserit, et sed hinc dolor, scaevola sum salutandi expetendis vix ne his quod mundi consequat sum. There are not many of passages of lorem</p>
-                    <p class="blog__details--desc">It is a long established fact that a reader will be distracted by the readable content of a page is when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                    <h2 class="blog__details--title mb-20">React courses listed</h2>
+                    <p class="blog__details--desc">1. The Beginner's Guide to React (Free)<br>
+                        Best introduction course in React, for beginners looking to build a solid foundation<br><a href="https://egghead.io/courses/the-beginner-s-guide-to-react">egghead.io</a></p>
+                    <p class="blog__details--desc">2. Learn React in Scrimba (Free)<br>
+                        Learn by simple interactive coding challenges and start applying your knowledge by building basic projects.<br><a href="https://scrimba.com/learn/learnreact">scrimba.com</a></p>
+                    <p class="blog__details--desc">3. Full Modern React Playlist (Free)<br>
+                        You will learn components & routing, state management, async code, built-in and custom hooks, etc.<br><a href="https://www.youtube.com/playlist?list=PL4cUxeGkcC9gZD-Tvwfod2gaISzfRiP9d">youtube.com</a></p>
+                    <p class="blog__details--desc">4. Practical React Course in 12 Hours (Free)<br>
+                        In this course, you will learn React by building eight real-world projects and solving 140+ coding challenges.<br><a href="https://www.youtube.com/watch?v=bMknfKXIFA8">youtube.com</a></p>    
+                    <p class="blog__details--desc">5. A Deep Dive into React Hooks (Paid)<br>
+                        You will learn how to achieve better code composition, code reuse, and unit testing ability.<br><a href="https://www.educative.io/courses/a-deep-dive-into-react-hooks">educative.io</a></p>
+                    <p class="blog__details--desc">6. Epic React (Paid)<br>
+                        You will learn how to build and ship well-architected production-ready React apps.<br><a href="https://epicreact.dev/">epicreact.dev</a></p>
+                    <p class="blog__details--desc">7. Complete React Developer in 2023 (w/ Redux, Hooks, GraphQL) (Paid)<br>
+                        ou will build a massive E-commerce app with Redux, Hooks, GraphQL, Stripe, Firebase.<br><a href="https://www.udemy.com/course/complete-react-developer-zero-to-mastery/">udemy.com</a></p>
                     <blockquote>
                         <svg class="blockquote__svg" aria-hidden="true" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"></path></svg>
-                        <p class="blockquote__desc">"Tailwind css is just awesome. It contains tons of predesigned components and pages starting from login screen to complex dashboard. Perfect choice for your next SaaS application."</p>
+                        <p class="blockquote__desc">"Well you won't be learning React before JS. You'll be learning them at the same time. I think most people would recommend taking some time with js first but I think what you want to do could work. There will be an added challenge when something confuses you: Is this a React concept that I don't understand, or is it js? If you think you can handle that, go for it."</p>
                     </blockquote>
                 </div>
                 <div class="comment__box">
@@ -292,11 +304,14 @@
                 </div>
                 <div class="blog__details--content mb-30">
                     <h2 class="blog__details--title mb-20">HTML and CSS</h2>
-                    <p class="blog__details--desc">It is a long established fact that a reader will be distracted by the readable content of a page is when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using ique maiestatis sum quod sum ut alienum nec et to summo possim persequeris vix mea. Adhuc quodsi qui, sit no tale essent electramei sum sums rodesset in pro, quo scripta feugait vidisse. Lorem ipsum dolor sit amet, eu duo ferri labor dicat Mea ex modo reque senserit, et sed hinc dolor, scaevola sum salutandi expetendis vix ne his quod mundi consequat sum. There are not many of passages of lorem</p>
-                    <p class="blog__details--desc">It is a long established fact that a reader will be distracted by the readable content of a page is when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                    <p class="blog__details--desc">1. Master the prototyping tool! Probably it's not a really popular opinion, but a learning tool like Figma is one of the first steps you should take in your design journey!</p><br>
+                    <p class="blog__details--desc">2. Learn the design process! Maybe you have already heard about Design Thinking and the user-centric approach. Being confident in the particular steps and design activities is absolutely necessary!</p><br>
+                    <p class="blog__details--desc">3. UX/UI design principles represent another design topic you must learn! It's necessary to know how to balance design, why consistency is essential, how to set a spacing system, or how to choose colors for your designs.</p><br>
+                    <p class="blog__details--desc">4. Find your mentor! Receiving constructive feedback and answers to your questions can speed up your learning process in a huge way!</p><br>
+                    <p class="blog__details--desc">5. Practice a lot! Mistakes are absolutely okay because it's actually trough mistakes you can grow. For that, you must practice problem-solving with a high focus on delivering end solutions "interactive prototypes, testing reports, research deliverables, etc."</p><br>
                     <blockquote>
                         <svg class="blockquote__svg" aria-hidden="true" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"></path></svg>
-                        <p class="blockquote__desc">"Tailwind css is just awesome. It contains tons of predesigned components and pages starting from login screen to complex dashboard. Perfect choice for your next SaaS application."</p>
+                        <p class="blockquote__desc">"Advanced technology requiring complex human-machine interactions is becoming essential for even the most basic aspects of living."</p>
                     </blockquote>
                 </div>
                 <div class="comment__box">
@@ -321,13 +336,24 @@
                     <img src="assets/img/blog/blog-details-1.png" alt="img">
                 </div>
                 <div class="blog__details--content mb-30">
-                    <h2 class="blog__details--title mb-20">Yaml</h2>
-                    <p class="blog__details--desc">It is a long established fact that a reader will be distracted by the readable content of a page is when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using ique maiestatis sum quod sum ut alienum nec et to summo possim persequeris vix mea. Adhuc quodsi qui, sit no tale essent electramei sum sums rodesset in pro, quo scripta feugait vidisse. Lorem ipsum dolor sit amet, eu duo ferri labor dicat Mea ex modo reque senserit, et sed hinc dolor, scaevola sum salutandi expetendis vix ne his quod mundi consequat sum. There are not many of passages of lorem</p>
-                    <p class="blog__details--desc">It is a long established fact that a reader will be distracted by the readable content of a page is when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
-                    <blockquote>
+                    <h2 class="blog__details--title mb-20">Website for design inspiration</h2>
+                    <p class="blog__details--desc">1.<a href="https://land-book.com">land-book.com</a></p><br>
+                    <p class="blog__details--desc">2.<a href="https://mobbin.design">mobbin.design</a></p><br>
+                    <p class="blog__details--desc">3.<a href="https://scrnshts.club">scrnshts.club</a></p><br>
+                    <p class="blog__details--desc">4.<a href="https://onepagelove.com">onepagelove.com</a></p><br>
+                    <p class="blog__details--desc">5.<a href="https://dribble.com">dribble.com</a></p><br>
+                    <p class="blog__details--desc">6.<a href="https://landingfolio.com">landingfolio.com</a></p><br>
+                    <p class="blog__details--desc">7.<a href="https://pageglows.com">pageglows.com</a></p><br>
+                    <p class="blog__details--desc">8.<a href="https://lapa.ninja">lapa.ninja</a></p><br>
+                    <p class="blog__details--desc">9.<a href="https://behance.net">behance.net</a></p><br>
+                    <p class="blog__details--desc">10.<a href="https://awwwards.net">awwwards.net</a></p><br>
+                    <p class="blog__details--desc">11.<a href="https://uigarage.net">uigarage.net</a></p><br>
+                    <p class="blog__details--desc">12.<a href="https://logoinspiration.co">logoinspiration.co</a></p><br>
+                    <p class="blog__details--desc">13.<a href="collectui.com">collectui.com</a></p><br>
+                    <!--<blockquote>
                         <svg class="blockquote__svg" aria-hidden="true" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"></path></svg>
                         <p class="blockquote__desc">"Tailwind css is just awesome. It contains tons of predesigned components and pages starting from login screen to complex dashboard. Perfect choice for your next SaaS application."</p>
-                    </blockquote>
+                    </blockquote>-->
                 </div>
                 <div class="comment__box">
                     <div class="reviews__comment--area2 mb-30">
