--- a/services.html
+++ b/services.html
@@ -152,72 +152,72 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 mb-30">
                             <div class="services__card">
                                 <span class="services__card--icon color1 mb-25">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16" id="IconChangeColor"> <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z" id="mainIconPathAttribute"></path> <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" id="mainIconPathAttribute"></path> </svg>
                                 </span>
                                 <div class="services__card--content">
-                                    <h3 class="services__card--title mb-15">Web Development</h3>
-                                    <p class="services__card--desc mb-20">Promote your blog posts, case udie, and product ouncems nts with the the branded videos.</p>
-                                    <a class="services__card--link color1" href="services.html">Read More</a>
+                                    <h3 class="services__card--title mb-15">Mobile Apps</h3>
+                                    <p class="services__card--desc mb-20">Harnessing the power of mobile technology to develop intuitive and feature-rich applications that engage and delight users.</p>
+                                    <a class="services__card--link color1" href="contact.html">Contact Me</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 mb-30">
                             <div class="services__card">
                                 <span class="services__card--icon color2 mb-25">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-life-buoy"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="4"></circle><line x1="4.93" y1="4.93" x2="9.17" y2="9.17"></line><line x1="14.83" y1="14.83" x2="19.07" y2="19.07"></line><line x1="14.83" y1="9.17" x2="19.07" y2="4.93"></line><line x1="14.83" y1="9.17" x2="18.36" y2="5.64"></line><line x1="4.93" y1="19.07" x2="9.17" y2="14.83"></line></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-mortarboard" viewBox="0 0 16 16" id="IconChangeColor"> <path d="M8.211 2.047a.5.5 0 0 0-.422 0l-7.5 3.5a.5.5 0 0 0 .025.917l7.5 3a.5.5 0 0 0 .372 0L14 7.14V13a1 1 0 0 0-1 1v2h3v-2a1 1 0 0 0-1-1V6.739l.686-.275a.5.5 0 0 0 .025-.917l-7.5-3.5ZM8 8.46 1.758 5.965 8 3.052l6.242 2.913L8 8.46Z" id="mainIconPathAttribute"></path> <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466 4.176 9.032Zm-.068 1.873.22-.748 3.496 1.311a.5.5 0 0 0 .352 0l3.496-1.311.22.748L8 12.46l-3.892-1.556Z" id="mainIconPathAttribute"></path> </svg>
                                 </span>
                                 <div class="services__card--content">
-                                    <h3 class="services__card--title mb-15">Creative Design</h3>
-                                    <p class="services__card--desc mb-20">Promote your blog posts, case udie, and product ouncems nts with the the branded videos.</p>
-                                    <a class="services__card--link color2" href="services.html">Read More</a>
+                                    <h3 class="services__card--title mb-15">Tutor</h3>
+                                    <p class="services__card--desc mb-20">Personalized one-on-one instruction to enhance learning, boost academic performance, and achieve educational goals.</p>
+                                    <a class="services__card--link color1" href="contact.html">Contact Me</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 mb-30">
                             <div class="services__card">
                                 <span class="services__card--icon color3 mb-25">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-chat-right-dots" viewBox="0 0 16 16" id="IconChangeColor"> <path d="M2 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9.586a2 2 0 0 1 1.414.586l2 2V2a1 1 0 0 0-1-1H2zm12-1a2 2 0 0 1 2 2v12.793a.5.5 0 0 1-.854.353l-2.853-2.853a1 1 0 0 0-.707-.293H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12z" id="mainIconPathAttribute"></path> <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" id="mainIconPathAttribute"></path> </svg>
                                 </span>
                                 <div class="services__card--content">
                                     <h3 class="services__card--title mb-15">Project Consultancy</h3>
-                                    <p class="services__card--desc mb-20">Promote your blog posts, case udie, and product ouncems nts with the the branded videos.</p>
-                                    <a class="services__card--link color3" href="services.html">Read More</a>
+                                    <p class="services__card--desc mb-20">Trusted guidance and expert advice to optimize your projects, ensuring efficiency, success, and maximum returns.</p>
+                                    <a class="services__card--link color1" href="contact.html">Contact Me</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 mb-30">
                             <div class="services__card">
                                 <span class="services__card--icon color4 mb-25">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-headphones"><path d="M3 18v-6a9 9 0 0 1 18 0v6"></path><path d="M21 19a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3zM3 19a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2H3z"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-brush" viewBox="0 0 16 16" id="IconChangeColor"> <path d="M15.825.12a.5.5 0 0 1 .132.584c-1.53 3.43-4.743 8.17-7.095 10.64a6.067 6.067 0 0 1-2.373 1.534c-.018.227-.06.538-.16.868-.201.659-.667 1.479-1.708 1.74a8.118 8.118 0 0 1-3.078.132 3.659 3.659 0 0 1-.562-.135 1.382 1.382 0 0 1-.466-.247.714.714 0 0 1-.204-.288.622.622 0 0 1 .004-.443c.095-.245.316-.38.461-.452.394-.197.625-.453.867-.826.095-.144.184-.297.287-.472l.117-.198c.151-.255.326-.54.546-.848.528-.739 1.201-.925 1.746-.896.126.007.243.025.348.048.062-.172.142-.38.238-.608.261-.619.658-1.419 1.187-2.069 2.176-2.67 6.18-6.206 9.117-8.104a.5.5 0 0 1 .596.04zM4.705 11.912a1.23 1.23 0 0 0-.419-.1c-.246-.013-.573.05-.879.479-.197.275-.355.532-.5.777l-.105.177c-.106.181-.213.362-.32.528a3.39 3.39 0 0 1-.76.861c.69.112 1.736.111 2.657-.12.559-.139.843-.569.993-1.06a3.122 3.122 0 0 0 .126-.75l-.793-.792zm1.44.026c.12-.04.277-.1.458-.183a5.068 5.068 0 0 0 1.535-1.1c1.9-1.996 4.412-5.57 6.052-8.631-2.59 1.927-5.566 4.66-7.302 6.792-.442.543-.795 1.243-1.042 1.826-.121.288-.214.54-.275.72v.001l.575.575zm-4.973 3.04.007-.005a.031.031 0 0 1-.007.004zm3.582-3.043.002.001h-.002z" id="mainIconPathAttribute"></path> </svg>
                                 </span>
                                 <div class="services__card--content">
-                                    <h3 class="services__card--title mb-15">24/7 Support</h3>
-                                    <p class="services__card--desc mb-20">Promote your blog posts, case udie, and product ouncems nts with the the branded videos.</p>
-                                    <a class="services__card--link color4" href="services.html">Read More</a>
+                                    <h3 class="services__card--title mb-15">Creative Design</h3>
+                                    <p class="services__card--desc mb-20">Unleashing imagination to craft visually stunning and impactful designs that captivate audiences and elevate brands.</p>
+                                    <a class="services__card--link color1" href="contact.html">Contact Me</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 mb-30">
                             <div class="services__card">
                                 <span class="services__card--icon color5 mb-25">
-                                    <svg width="40" height="40" stroke="currentColor" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M272 384c9.6-31.9 29.5-59.1 49.2-86.2l0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C368 78.8 289.2 0 192 0S16 78.8 16 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0c19.8 27.1 39.7 54.4 49.2 86.2H272zM192 512c44.2 0 80-35.8 80-80V416H112v16c0 44.2 35.8 80 80 80zM112 176c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-61.9 50.1-112 112-112c8.8 0 16 7.2 16 16s-7.2 16-16 16c-44.2 0-80 35.8-80 80z"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-pc-display-horizontal" viewBox="0 0 16 16" id="IconChangeColor"> <path d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" id="mainIconPathAttribute"></path> </svg>
                                 </span>
                                 <div class="services__card--content">
-                                    <h3 class="services__card--title mb-15">Awesome Idea</h3>
-                                    <p class="services__card--desc mb-20">Promote your blog posts, case udie, and product ouncems nts with the the branded videos.</p>
-                                    <a class="services__card--link color5" href="services.html">Read More</a>
+                                    <h3 class="services__card--title mb-15">Website Development</h3>
+                                    <p class="services__card--desc mb-20">Transforming your ideas into functional, user-friendly websites with modern designs and seamless functionality.</p>
+                                    <a class="services__card--link color1" href="contact.html">Contact Me</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 mb-30">
                             <div class="services__card">
                                 <span class="services__card--icon color6 mb-25">
-                                    <svg width="40" height="40" stroke="currentColor" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M135.2 117.4L109.1 192H402.9l-26.1-74.6C372.3 104.6 360.2 96 346.6 96H165.4c-13.6 0-25.7 8.6-30.2 21.4zM39.6 196.8L74.8 96.3C88.3 57.8 124.6 32 165.4 32H346.6c40.8 0 77.1 25.8 90.6 64.3l35.2 100.5c23.2 9.6 39.6 32.5 39.6 59.2V400v48c0 17.7-14.3 32-32 32H448c-17.7 0-32-14.3-32-32V400H96v48c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32V400 256c0-26.7 16.4-49.6 39.6-59.2zM128 288c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32s32-14.3 32-32zm288 32c17.7 0 32-14.3 32-32s-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32z"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-music-note-list" viewBox="0 0 16 16" id="IconChangeColor"> <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2z" id="mainIconPathAttribute"></path> <path fill-rule="evenodd" d="M12 3v10h-1V3h1z" id="mainIconPathAttribute"></path> <path d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1V2.82z" id="mainIconPathAttribute"></path> <path fill-rule="evenodd" d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5z" id="mainIconPathAttribute"></path> </svg>
                                 </span>
                                 <div class="services__card--content">
-                                    <h3 class="services__card--title mb-15">Development Design</h3>
-                                    <p class="services__card--desc mb-20">Promote your blog posts, case udie, and product ouncems nts with the the branded videos.</p>
-                                    <a class="services__card--link color6" href="services.html">Read More</a>
+                                    <h3 class="services__card--title mb-15">Song Producer</h3>
+                                    <p class="services__card--desc mb-20">Crafting evocative lyrics and captivating melodies that resonate with emotions, telling stories that connect with audiences.</p>
+                                    <a class="services__card--link color1" href="contact.html">Contact Me</a>
                                 </div>
                             </div>
                         </div>
