--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <span class="hero__content--subtitle text__secondary mb-10">HELLO  I'M</span>
                                 <h2 class="hero__content--title mb-15">Sufi Firdaus! </h2>
                                 <h3 class="hero__content--subtitle2 mb-20">Developer and Teacher</h3>
-                                <p class="hero__content--desc mb-30">Passionate Multimedia Developer and Educator experienced in AR development, app creation and . Committed to exceptional user experiences, engaging learning environments, and innovative technology solutions.</p>
+                                <p class="hero__content--desc mb-30">Experienced Multimedia Developer and Educator with a strong passion for creating immersive AR experiences, developing cutting-edge applications, and fostering engaging learning environments. Dedicated to delivering exceptional user experiences and providing innovative technology solutions.</p>
                                 <button class="primary__btn download__btn mb-30" onclick="downloadFile('assets/file/Resume Academia.pdf')">
                                     <svg class="download__btn--svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
@@ -125,7 +125,7 @@
                                             <span class="visually-hidden">Github</span>
                                         </a>
                                         </li>
-                                        <li class="social__share--child"><a class="social__share--link" href="https://my.linkedin.com/in/sufi-firdaus-a612631b7">
+                                        <li class="social__share--child"><a class="social__share--link" href="https://www.linkedin.com/in/sufifirdaus95/">
                                             <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="20px" height="20px">    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                                             <span class="visually-hidden">Linkedin</span>
                                             </a>
