--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,13 @@
     } 
   </script>
 
+
+
 </head>
 
 <body class="bg-dark_primary_bg">
 
+    
     <!-- Preloader start -->
     <div id="preloader">
         <div class="loader--border"></div>
@@ -801,10 +804,10 @@
                     The development process followed a meticulous path, starting with planning and analysis, followed by UI/UX design, app development, testing, and finally, deployment. I utilized Unity as the primary development software, integrating Vuforia for seamless AR implementation. Figma proved invaluable for the design process. I actively participated in testing and received positive feedback from students, which was incredibly rewarding. In fact, the app's success led me to be awarded a gold medal at the prestigious PiCTL event held at UPM.<br><br>
                     Inspired by the project's impact, I decided to pursue a Master's degree, focusing on researching stereoscopic augmented reality in the context of learning heart anatomy. This academic journey allows me to delve deeper into the potential of AR technology and its applications in medical education, with the ultimate aim of revolutionizing the way students understand and engage with complex anatomical concepts.<br><br>
                     </p>
-                <div class="portfolio__modal--info__media">
+                <!--<div class="portfolio__modal--info__media">
                     <img src="assets/img/other/portfolio-big1.png" alt="img"><br>
                     <img src="assets/img/other/portfolio-big1.png" alt="img">
-                </div>
+                </div>-->
             </div>
           </div>
         </div>
@@ -2485,7 +2488,16 @@
         </div>
     </div>
 
+    <script>
+       const elements = document.getElementsByClassName('portfolio__modal--info__media');
 
+        for (let i = 0; i < elements.length; i++) {
+            const element = elements[i];
+            const lines = element.innerHTML.split('\n');
+            const commentedLines = lines.map(line => `<!--${line}-->`);
+            element.innerHTML = commentedLines.join('\n');
+        }    
+    </script>
 
     <!-- Scroll top bar -->
     <button id="scroll__top"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round"  stroke-width="48" d="M112 244l144-144 144 144M256 120v292"/></svg></button>
@@ -2510,6 +2522,8 @@
       document.getElementById("light__to--dark")?.classList.remove("dark--version");
     } 
   </script>
+
+ 
   
 </body>
 </html>
