--- a/portfolio.html
+++ b/portfolio.html
@@ -547,7 +547,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="element-item achievement" data-category="achievement">
+                        <div class="element-item student" data-category="student">
                             <div class="portfolio__card">
                                 <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement6">
                                     <div class="portfolio__image--card">
@@ -563,7 +563,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="element-item achievement" data-category="achievement">
+                        <div class="element-item student" data-category="student">
                             <div class="portfolio__card">
                                 <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement7">
                                     <div class="portfolio__image--card">
